# MyVoronoi

./: CMakeLists.txt  README.md
src/: BasicDataType.h  MyVoronoi.cpp  MyVoronoi.h  main.cpp
